docs: add transaction documentation
